elastic/elastic-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    name: elastic
  name: elastic
spec:
  finalizers:
  - kubernetes
