elastic/kibana-ingress-hotwarm.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-hotwarm-ingress
  namespace: elastic
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - kibana.upgrade.lan
  rules:
  - host: kibana.upgrade.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: hotwarm-kb-http
          servicePort: 5601
