elastic/kibana-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - kibana.localhost
  rules:
  - host: kibana.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: quickstart-kb-http
          servicePort: 5601
